Closed Bug 462407 Opened 16 years ago Closed 16 years ago

TM: "Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap)" #4

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: dvander)

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

for each (let i in [0, {}, 0, 1.5, {}, 0, 1.5, 0, 0]) { } Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap), at jstracer.cpp:2730
Attached patch proposed fixSplinter Review
When attempting to re-stabilize because of unpromotable slots, also mark as unpromotable any slots which were double to begin with. Note: I expect this assertion to rear up a few more times. I'm trying to get all the easy cases -- resorting to the oracle in any aggressive manner is a 10-15ms perf loss on my machine.
Assignee: general → danderson
Status: NEW → ASSIGNED
Attachment #345582 - Flags: review?(gal)
Attachment #345582 - Flags: review?(gal) → review+
Pushed changeset as http://hg.mozilla.org/tracemonkey/rev/d799b532a33a (took this opportunity to use better names for the DEMOTE macros).
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
http://hg.mozilla.org/mozilla-central/rev/37b3fdbb0f07 /cvsroot/mozilla/js/tests/js1_7/regress/regress-462407.js,v <-- regress-462407.js initial revision: 1.1
Flags: in-testsuite+
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: