Make sure double slots are marked as undemotable when stabilizing a tree with failed speculation (bug 462407, r=gal).